# AgentBoss

./: .gitignore  README.md  README_zh.md  pyproject.toml
cli/: main.py  models.py  nostr_client.py  regions.py  storage.py
docs/: README.md  _sidebar.md  index.html
docs/superpowers/: _sidebar.md  index.html
docs/superpowers/plans/: 2026-03-24-agentboss-implementation.md  2026-03-24-agentboss-job-search-implementation.md  2026-03-24-agentboss-job-status-implementation.md  2026-03-25-agentboss-docsify-migration-plan.md  2026-03-25-agentboss-federation-job-persistence-implementation.md  2026-03-25-agentboss-frontend-testing-implementation-plan.md  2026-03-25-agentboss-github-pages-deploy-implementation.md  2026-03-25-agentboss-github-pages-deployment-implementation.md  2026-03-25-agentboss-i18n-implementation-plan.md  2026-03-25-agentboss-job-application-implementation.md  2026-03-25-agentboss-jobcard-ux-implementation-plan.md  2026-03-25-agentboss-regionmapping-type-fix-implementation.md  2026-03-25-agentboss-relay-federation-implementation.md  (+10 more)
relay/: setup.sh  strfry.conf  write_policy.py
shared/: constants.py  crypto.py  event.py
tests/: conftest.py  test_cli.py  test_crypto.py  test_event.py  test_integration.py  test_models.py  test_nostr_client.py  test_regions.py  test_storage.py  test_web_api.py  test_web_auth.py  test_web_db.py  test_write_policy.py
web/: app.py  auth.py  db.py  index.html  package-lock.json  package.json  vite.config.js
web/src/: app.jsx  main.jsx
web/static/: style.css
web/templates/: base.html  dashboard.html  register.html
(+46 files in other folders)
