[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentboss"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "aiohttp>=3.9.0",
    "secp256k1>=0.14.0",
    "cryptography>=41.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "jinja2>=3.1.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.6",
    "aiosqlite>=0.19.0",
    "itsdangerous>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[project.scripts]
agentboss = "cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["shared", "cli", "web"]
